updated css and js files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900" rel="stylesheet">
 
 	<!-- Enter jQuery -->
 	<script
@@ -28,8 +29,8 @@
 		<form id="js-search-form" action="#">
 			<fieldset>
 				<legend>Enter your search terms</legend>
-				<label for="query"></label>
-				<input id="js-query" type="text" name="query" placeholder="Type your query here..." required>
+				<label for="search-query"></label>
+				<input id="js-search-query" type="text" name="search-query" placeholder="Type your query here..." required>
 				<button id="js-submit-query" type="submit">Search</button>
 			</fieldset>
 		</form>
