fixed html and js results rendering

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 		<section class="results js-results hidden">
 			<h2>Top search results:</h2>
+			<div class="result"></div>
 		</section>
 	</main>
 
