--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</form>
 
 		<section class="results js-results hidden">
-			<h2>Top search results:</h2>
+			<h2>Results filtered by most views:</h2>
 			<div class="result"></div>
 		</section>
 	</main>
