--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
 	<footer>&copy; 2018 PP Search Forms</footer>
 
+	<script src="html5lightbox.js"></script>
 	<script src="search.js"></script>
-  <script src="https://apis.google.com/js/client.js" ></script>
+
 </body>
 </html>
