re-invented lightbox feature

--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
 
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900" rel="stylesheet">
-
-	<!-- Enter jQuery -->
-	<script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous">
-  </script>
+	<link href="lity.min.css" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Montserrat:400,600,900" rel="stylesheet">
 
 </head>
 <body>
@@ -43,6 +37,19 @@
 
 	<footer>&copy; 2018 PP Search Forms</footer>
 
+	<!-- Enter jQuery -->
+	<script
+    src="//code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous">
+  </script>
+
+  <!-- Enter Zepto -->
+  <script src="zepto.min.js"></script>
+
+  <!-- Enter Lity -->
+  <script src="lity.min.js"></script>
+  
 	<script src="search.js"></script>
 
 </body>
