minor css changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</form>
 
 		<section id="results" class="results js-results hidden">
-			<h2>Results filtered by most views:</h2>
+			<h2>Results <span>[ filtered by most views ]</span></h2>
 			<div class="result"></div>
 		</section>
 
