--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</div>
 	</main>
 
-	<footer>&copy; 2018 Search Forms by Peter Pan</footer>
+	<footer>&copy; 2018 YoutubeSearchForm by Peter Pan</footer>
 
 	<!-- Enter jQuery -->
 	<script
