--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 
 	<meta charset="utf-8">
+	<meta name="author" content="Peter Pan">
+	<meta name="description" content="A responsive Youtube video search page">
 	<meta name="viewport" content="width=device-width">
 
 	<title>Search for videos on Youtube</title>
@@ -33,15 +35,17 @@
 			<h2>Results <span>[ filtered by most views ]</span></h2>
 			<div class="result"></div>
 		</section>
+	</main>
 
+	<nav id="navigation">
 		<div class="pagination clearfix">
 			<div id="prevPage"></div>
 			<div id="nextPage"></div>
 		</div>
 		<div>
-			<a id="back-to-top" class="hidden clearfix" href="#">Back to top</a>
+			<a id="back-to-top" class="clearfix" href="#">Back to top</a>
 		</div>
-	</main>
+	</nav>
 
 	<footer>&copy; 2018 YoutubeSearchForm by Peter Pan</footer>
 
