added aria-label to input

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<fieldset>
 				<legend>Enter your search terms</legend>
 				<label for="search-input"></label>
-				<input id="js-search-input" type="text" name="search-input" placeholder="Type your query here..." required>
+				<input id="js-search-input" type="text" name="search-input"  aria-label="search input field" placeholder="Type your query here..." required>
 				<button id="js-search-button" type="submit">Search</button>
 			</fieldset>
 		</form>
