attempt at making the page a11y-friendly

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 			</fieldset>
 		</form>
 
-		<section id="results" class="results js-results hidden">
+		<section id="results" class="results js-results hidden" aria-live="assertive" hidden>
 			<h2>Results <span>[ filtered by most views ]</span></h2>
 			<div class="result"></div>
 		</section>
 	</main>
 
-	<nav id="navigation">
+	<nav id="navigation" aria-live="assertive" hidden>
 		<div class="pagination clearfix">
 			<div id="prevPage"></div>
 			<div id="nextPage"></div>
