added hidden attr to footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</div>
 	</nav>
 
-	<footer>&copy; 2018 YoutubeSearchForm by Peter Pan</footer>
+	<footer hidden>&copy; 2018 YoutubeSearchForm by Peter Pan</footer>
 
 	<!-- Enter jQuery -->
 	<script
