--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	</header>
 
 	<main>
+
 		<form id="js-search-form" action="">
 			<fieldset>
 				<legend>Enter your search terms</legend>
@@ -32,9 +33,11 @@
 		</form>
 
 		<section id="results" class="results js-results hidden" aria-live="assertive" hidden>
-			<h2>Results <span>[ filtered by most views ]</span></h2>
+			<h2>Results <span id="h2-span">[ filtered by highest rating ]</span></h2>
+			<p class="showResultsCount"></p>
 			<div class="result"></div>
 		</section>
+		
 	</main>
 
 	<nav id="navigation" aria-live="assertive" hidden>
