--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 		<form id="js-search-form" action="">
 			<fieldset>
 				<legend>Enter your search terms</legend>
-				<label for="search-input"></label>
-				<input id="js-search-input" type="text" name="search-input"  aria-label="search input field" placeholder="Type your query here..." required>
+				<label for="search-input">
+					<input id="js-search-input" type="text" name="search-input"  aria-label="search input field" placeholder="Type your query here..." required>
+				</label>
 				<button id="js-search-button" type="submit">Search</button>
 			</fieldset>
 		</form>
