reverted back to master before branching

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div id="nextPage"></div>
 		</div>
 		<div>
-			<a id="back-to-top" class="clearfix" href="#">Back to top</a>
+			<a id="back-to-top" class="clearfix" href="#">[ Back to top ]</a>
 		</div>
 	</nav>
 
