--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</form>
 
 		<section id="results" class="results js-results hidden" aria-live="assertive" hidden>
-			<h2>Results <span id="h2-span">[ filtered by most views ]</span></h2>
+			<h2>Results <span id="h2-span">[ filtered by relevance ]</span></h2>
 			<p class="showResultsCount"></p>
 			<div class="result"></div>
 		</section>
